--- a/app/templates/personal-profile.html
+++ b/app/templates/personal-profile.html
@@ -289,7 +289,7 @@ Type: Integer
             {% else %}
             <div class="row clearfix">
                 <div class="col-md-12 column">
-                    <h5 class="text-center mt-4 text-secondary" role="alert">
+                    <h5 class="text-center mt-4 text-secondary">
                         This user hasn't posted yet.
                     </h5>
                 </div>
