--- a/app/static/css/ranking-page.css
+++ b/app/static/css/ranking-page.css
@@ -12,5 +12,5 @@ main {
 }
 
 h1 {
-    text-shadow: 2px 1px 3px rgba(0, 0, 0, 0.304); /* 添加阴影效果 */
+    text-shadow: 2px 1px 3px rgba(0, 0, 0, 0.304); /* Add shadow effect */
 }
