--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 
+<!-- Title Block: Sets the title of the webpage to "QuorAI - Answers with AI", describing the site's purpose. -->
 {% block title %}
 <title>QuorAI - Answers with AI</title>
 {% endblock %}
 
-
+<!-- Style Block: Links a custom CSS file for specific styling of the index page, dynamically loaded using Flask's url_for function. -->
 {% block style %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}" />
 {% endblock %}
@@ -119,7 +120,7 @@
 </div>
 {% endblock %}
 
-
+<!-- Script Block: Loads a custom JavaScript file for the index page and includes additional inline scripts for dynamic date handling using Moment.js. -->
 {% block script %}
 <script src="{{ url_for('static', filename='js/index.js') }}"></script>
 <script>
