--- a/app/templates/ranking-page.html
+++ b/app/templates/ranking-page.html
@@ -1,14 +1,8 @@
 {% extends "base.html" %}
 
-{% block title %}
-{% if title %}
-<title>{{ title }} - Blog</title>
-{% else %}
-<title>Welcome to Blog!</title>
-{% endif %}
-{% endblock %}
 
 {% block style %}
+<title>Ranking</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/ranking-page.css') }}" />
 {% endblock %}
 
