--- a/app/templates/post-details.html
+++ b/app/templates/post-details.html
@@ -68,7 +68,7 @@
                                 <span style="display: inline; color: brown;">&nbsp;<i class="bi bi-award-fill"></i>{{ comment.author.credit }}</span>
                                 {% if comment.author == current_user %}
                                 <div class="float-end text-danger" style="display: inline; text-align: right;">
-                                    <button class="btn" id="deleteCommentBtn" data-comment-id="{{ comment.id }}">
+                                    <button class="btn btncom1" id="deleteCommentBtn" data-comment-id="{{ comment.id }}">
                                         <i class="bi bi-trash-fill"></i>
                                         &nbsp;
                                     </button>
@@ -214,32 +214,26 @@
     
             <script>
                 // delete comment
-                $(document).ready(function () {
-                    $('#deleteCommentBtn').click(function () {
-                        const comment_id = $(this).data('comment-id');
-                        const baseUrl = `${window.location.protocol}//${window.location.host}`;
-    
-                        $.ajax({
-                            type: 'POST',
-                            url: `${baseUrl}/delete-comment/${comment_id}`,
-                            success: function (response) {
-                                if (response.code === 200) {
-                                    $('#resultMessage').html('<div class="alert alert-success" role="alert">Comment deleted successfully!</div>');
-                                    // go to the discussion page
-                                    setTimeout(function () {
-                                        window.location.href = window.location.pathname;
-                                    }, 1000);
-    
-                                } else {
-                                    $('#resultMessage').html('<div class="alert alert-danger" role="alert">Error: ' + response.message + '</div>');
-                                }
-                            },
-                            error: function () {
-                                $('#resultMessage').html('<div class="alert alert-danger" role="alert">An error occurred. Please try again later.</div>');
-                            }
-                        });
-                    });
+                document.querySelectorAll('.btncom1').forEach(function(btn) {
+        btn.addEventListener('click', function() {
+            var commentId = btn.getAttribute('data-comment-id');
+            var confirmation = confirm('Are you sure you want to delete this comment?');
+
+            if (confirmation) {
+                fetch(`/delete-comment/${commentId}`, {
+                    method: 'POST'
+                })
+                .then(response => response.json())
+                .then(data => {
+                    if (data.code === 200) {
+                        window.location.reload();
+                    } else {
+                        alert('An error occurred. Please try again later.');
+                    }
                 });
+            }
+        });
+    });
             </script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
             <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
